# chatbot_TCC_backend

./: pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_chat_and_message.py  0003_add_user_name.py  0004_add_sensor_data.py
app/: main.py
app/api/v1/: api.py  auth.py  chatbot.py  chats.py  sensors.py  users.py
app/core/: cache.py  config.py  database.py  logger.py  middleware.py
app/core/LLMs/agents/chatbot/: agent.py
app/models/: __init__.py  base.py  chat.py  message.py  sensor.py  user.py
app/schemas/: auth.py  chat.py  message.py  sensor.py  user.py
app/services/: chat.py  database.py  sensor.py  user.py
app/utils/: auth.py
scripts/: create_admin.py
