[project]
name = "TCC-IFSP"
version = "0.1.0"
description = "FastAPI backend for AI-driven application"
requires-python = ">=3.11, <3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.8",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.6",
    
    "pgvector>=0.2.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "psycopg>=3.3.4",
    "slowapi>=0.1.9",
    "asyncpg>=0.31.0",
    
    "langchain>=0.1.0",
    "langchain-google-genai>=4.2.4",
    "langgraph>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "mypy>=1.7.0",
    "vulture>=2.10.0",
]

    

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E402", "E741"]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["E402", "F401", "I001"]
"tests/**" = ["N806", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "regression: Regression tests that verify existing functionality still works",
    "critical: Critical path tests that must pass",
    "slow: Tests that take longer than 5 seconds",
    "fast: Tests that take less than 1 second",
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "security: Security tests",
]
addopts = [
    "-v",
    "--strict-markers",
    "-ra",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]